feat: Enhance AI generation and user experience
Introduces new features for AI-driven content generation and improves the user interface.

Key changes include:
- Adding functionality to generate brand identity suggestions (name, audience, tone) based on user input.
- Enabling users to upload brand images to influence content generation.
- Implementing social media platform connection/disconnection and post publishing simulations.
- Refactoring API response schemas for clarity and extensibility.
- Updating UI elements, including changing the background color and adding new icons (UploadCloud).
- Adding a "postFrequency" field to the FormData for more granular content planning.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
-      background-color: #f0f4f8; /* A light, neutral background */
+      background-color: #0669cc; /* A light, neutral background */
     }
   </style>
 <script type="importmap">
