--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
     "react/": "https://aistudiocdn.com/react@^19.1.1/",
     "react": "https://aistudiocdn.com/react@^19.1.1",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.17.0"
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.17.0",
+    "express": "https://aistudiocdn.com/express@^5.1.0",
+    "cors": "https://aistudiocdn.com/cors@^2.8.5",
+    "dotenv": "https://aistudiocdn.com/dotenv@^17.2.2",
+    "axios": "https://aistudiocdn.com/axios@^1.12.2",
+    "buffer": "https://aistudiocdn.com/buffer@^6.0.3",
+    "form-data": "https://aistudiocdn.com/form-data@^4.0.4"
   }
 }
 </script>
